--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.sayHello",
         "onLanguage:python",
         "onLanguage:C#",
         "onLanguage:C",
         "onLanguage:C++",
         "onLanguage:javascript",
         "onLanguage:typescript",
-        "onLanguage:plaintext"
+        "onLanguage:plaintext",
+        "*"
     ],
     "main": "./out/extension",
     "contributes": {
